--- a/src/components/organisms/page-content/ecs-request-details/ecs-request-details.scss
+++ b/src/components/organisms/page-content/ecs-request-details/ecs-request-details.scss
@@ -17,3 +17,11 @@
 .certPdfViewContainer {
   border: 1px solid #ccc;
 }
+
+.miniBtn {
+  width: 20px !important;
+  max-width: 20px !important;
+  height: 20px !important;
+  background-color: transparent !important;
+  border: transparent !important;
+}
