--- a/src/components/organisms/global-footer/global-footer.scss
+++ b/src/components/organisms/global-footer/global-footer.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/varaiable";
 
 .footer-root{
+    background-color: $pageBackground;
     font-size: 10px;
     padding: 10px;
 }
